fixed horizontal scroll

--- a/components/ZineDisplay.module.css
+++ b/components/ZineDisplay.module.css
@@ -2,6 +2,7 @@
   padding-bottom: 10px;
   width: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .header {
